﻿ASAP - Another Slight Atari Player
==================================

:Compact-Option:

link:/[Home]
image:http://sflogo.sourceforge.net/sflogo.php?group_id=154391&amp;type=13["Get ASAP - Another Slight Atari Player at SourceForge.net. Fast, secure and Free Open Source software downloads",width=120,height=30,link="http://sourceforge.net/projects/asap/"]

News
----

ASAP 3.1.4 (2013-04-29)::

- Android: plays in background, can switch to next/previous/random file, opens M3U playlists, file selector can display metadata, "back" returns to parent directory.
- WASAP fixed to avoid occasional deadlock when opening files during playback.
- VLC plugin compiled for OS X.
- 64-bit RPMs.
- Fixed time detection for CMS.
- Windows Explorer displays titles for RMT, TMC, TM2.
- "Show information about the currently playing file" restored after Winamp/XMPlay restart.
- TortoiseSVN and TortoiseGit plugins don't depend on libz-1.dll.
- asapscan calculates SAP fingerprints (contributed by Jakub Husak).
- Experimental ASAP2WAV in Perl.


ASAP 3.1.3 (2012-12-04)::

- foobar2000 plugin plays files inside ATR disk images.
- VLC and AIMP 3 plugins support RMT and FC in addition to SAP.
- Audacious plugin can edit AUTHOR, NAME and year, upgraded to Audacious 3.3.
- GStreamer plugin handles TIME, AUTHOR, NAME, DATE and seek, compiled for Windows.
- Fixed JAD file for the Java midlet.
- Created RPMs for VLC and GStreamer.
- Experimental Windows 8 port.


ASAP 3.1.2 (2012-06-25)::

- Created VLC plugin (SAP format only).
- The JavaScript player now works in Chrome, Firefox, Internet Explorer 9 and 6, using https://github.com/grantgalitz/XAudioJS[XAudioJS].
- Flash Player, Java applet, Silverlight and JavaScript players were put in a single "web" package.
- UTF-8 encoding is supported for STIL.
- Author is no longer hidden in the converted XEX files.
- Winamp plugin opens ATR disk images and plays files inside them.
- Audacious plugin updated to Audacious 3.2 and compiled for Windows.