@@ -49,7 +49,7 @@ public class ASAPInfo
 	/// ASAP version - minor part.
 	public const int VersionMinor = 1;
 	/// ASAP version - micro part.
-	public const int VersionMicro = 4;
+	public const int VersionMicro = 5;
 	/// ASAP version as a string.
 	public const string Version = VersionMajor + "." + VersionMinor + "." + VersionMicro;
 
