@@ -1,5 +1,5 @@
 <Package xmlns="http://schemas.microsoft.com/appx/2010/manifest">
-	<Identity Name="ASAP" Publisher="CN=foxoft.com.pl" Version="3.1.4.0" />
+	<Identity Name="ASAP" Publisher="CN=foxoft.com.pl" Version="3.1.5.0" />
 	<Properties>
 		<DisplayName>ASAP</DisplayName>
 		<PublisherDisplayName>foxoft.com.pl</PublisherDisplayName>
